jilles      2006/10/01 21:00:54 UTC	(20061001-6607)
  Log:
  Remove empty helpserv help directory.
  

  Changes:	Modified:
  + -		trunk/help/helpserv/ (File Deleted) 


jilles      2006/10/01 20:57:36 UTC	(20061001-6605)
  Log:
  command_help(), command_help_short():
  Say we are listing "subcommands" instead of "commands"
  if we are listing a command list other than the service's
  main command list.
  

  Changes:	Modified:
  +8 -2		trunk/src/commandtree.c (File Modified) 


jilles      2006/10/01 20:49:21 UTC	(20061001-6603)
  Log:
  chanserv clear: move /cs help clear to a help function
  that displays all subcommands currently loaded, similar
  to /ns help set.
  

  Changes:	Modified:
  +0 -16	trunk/help/cservice/clear (File Deleted) 
  +13 -1	trunk/modules/chanserv/clear.c (File Modified) 


jilles      2006/10/01 20:35:01 UTC	(20061001-6601)
  Log:
  nickserv help set: take no_nick_ownership into account
  

  Changes:	Modified:
  +4 -1		trunk/modules/nickserv/set.c (File Modified) 


jilles      2006/10/01 20:31:57 UTC	(20061001-6599)
  Log:
  Convert memoserv ignore to command_t and sourceinfo.
  

  Changes:	Modified:
  +96 -105	trunk/modules/memoserv/ignore.c (File Modified) 


jilles      2006/10/01 19:20:01 UTC	(20061001-6597)
  Log:
  Bring back /ns help set, which was lost in r6337.
  

  Changes:	Modified:
  +16 -0	trunk/modules/nickserv/set.c (File Modified) 


jilles      2006/10/01 19:12:28 UTC	(20061001-6595)
  Log:
  Change help functions (not used much) to sourceinfo.
  

  Changes:	Modified:
  +27 -27	trunk/contrib/ns_enforce.c (File Modified) 
  +2 -2		trunk/include/commandtree.h (File Modified) 
  +2 -3		trunk/src/help.c (File Modified) 


jilles      2006/10/01 18:51:45 UTC	(20061001-6593)
  Log:
  Update command_help() and command_help_short() to sourceinfo.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 
  +2 -2		trunk/include/commandtree.h (File Modified) 